Fixing fullscreen clicking / z-index bug

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -369,10 +369,10 @@ body {
 .fullscreen {
     position: absolute;
     left: 0;
-    top: 0;
+    top: 48px;
     width: 100% !important;
     height: 100% !important;
-    z-index: -9;
+    z-index: 0;
 }
 
 
